--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "request": "launch",
       "program": "${workspaceFolder}/bin/gg_image_tools.dart",
       "args": [
-        "mvcd",
+        "split",
         "-i",
         "${workspaceFolder}/test/",
         "-o",
