--- a/check.yaml
+++ b/check.yaml
@@ -1,8 +1,9 @@
+needsInternet: true
 analyze:
   execute: true
 format:
   execute: true
-coverage:
+tests:
   execute: true
 pana:
   execute: false
