--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,13 @@ dependencies:
   colorize: ^3.0.0
   exif: ^3.3.0
   path: ^1.8.0
+  recase: ^4.1.0
 
 dev_dependencies:
+  test_api: ^0.7.0
   coverage: ^1.7.2
   lints: ^3.0.0
   pana: ^0.22.0
   test: ^1.24.0
   yaml: ^3.1.2
+  dart_ping: ^9.0.1
