--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   args: ^2.4.2
   colorize: ^3.0.0
   exif: ^3.3.0
+  gg_args: ^1.0.3
   path: ^1.8.0
   recase: ^4.1.0
 
@@ -21,3 +22,5 @@ dev_dependencies:
   test: ^1.24.0
   yaml: ^3.1.2
   dart_ping: ^9.0.1
+  gg_check: ^1.0.2
+  gg_capture_print: ^1.0.2
