--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,5 +22,5 @@ dev_dependencies:
   test: ^1.24.0
   yaml: ^3.1.2
   dart_ping: ^9.0.1
-  gg_check: ^1.0.2
   gg_capture_print: ^1.0.2
+  gg_install_gg: ^1.0.1
